fixed several spacings

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -399,11 +399,12 @@ li a {
     justify-content: center;
 }
 
-.paragraph-format {
+.about-paragraph-format {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin: -20px;
 }
 
 .about-container {
